# haiku-netservices-rfc

./: CMakeLists.txt  ReadMe.md
headers/public/: ErrorsExt.h  Expected.h  HttpAuthentication.h  HttpHeaders.h  HttpMethod.h  HttpRequest.h  HttpResponse.h  HttpResult.h  HttpSession.h  NetServices.h  NetworkRequest.h  UrlProtocolRoster.h  UrlRequest.h  UrlResult.h
src/: CMakeLists.txt  HttpAuthentication.cpp  HttpForm.cpp  HttpHeaders.cpp  HttpMethod.cpp  HttpRequest.cpp  HttpResult.cpp  HttpResultPrivate.h  HttpSession.cpp  NetServices.cpp  NetworkRequest.cpp  UrlProtocolRoster.cpp  UrlRequest.cpp  UrlResult.cpp
test/: main.cpp
